--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goldenkart",
   "version": "1.0.0",
-  "description": "The perfect place for you.",
+  "description": "The perfect place for you to shop.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
